# backend

./: .Dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  init-mongo.sh  pyproject.toml
.gemini/: GEMINI.md
.github/workflows/: cd.yml  ci.yml
backend/: gunicorn_conf.py  main.py
backend/database/: connection.py
src/: main.py
src/core/: base.py  config.py
src/database/: connection.py
src/models/: jwts.py  plans.py  users.py
src/routes/: auths.py  plans.py  users.py
src/schemas/: auths.py  jwts.py  plans.py  users.py
src/services/: auth_service.py  plan_service.py
src/utils/: jwt_utils.py  security.py
tests/: conftest.py  test_auth.py  test_plans.py
